--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ nav:hover ul{
 	font-size: 80%;
 	margin:4%;
 }
+/*start of gallery*/
 .one-third-port{
 	width:29.333333%;
 	padding: 2%;
@@ -141,6 +142,31 @@ nav:hover ul{
 .one-third-port img:hover{
 	opacity:.6;
 }
+
+.filterDiv{
+	display: none;
+}
+
+.show{
+	display: inline;
+}
+.btn{
+	border:none;
+	outline: none;
+	padding:12px 16px;
+	cursor: pointer;
+	/*modify this later*/
+	background-color: #f1f1f1;
+}
+
+.btn:hover{
+	background-color: #ddd;
+}
+.btn:active{
+	background-color: #666;
+	color:white;
+}
+/*end of gallery*/
 .contact p{
 	text-align: center;
 	letter-spacing:5px;
