--- a/style.css
+++ b/style.css
@@ -133,6 +133,17 @@ nav:hover ul{
 	font-size: 80%;
 	margin:4%;
 }
+/*starting gallery*/
+#myInput{
+	/*background-image: url('css/searchicon.png');*/
+	background-position: 10px 12px;
+	background-repeat: no-repeat;
+	width: 100%;
+	font-size:20px;
+	padding:12px 20px 12px 40px;
+	border:1px solid #ddd;
+	margin-bottom:12px;
+}
 .one-third-port{
 	width:29.333333%;
 	padding: 2%;
